tests/valid/teste_ifelse.lang
//If e else

int a = 2;

if (a > 3) {
    a = 10;
} else {
    a = 0;
}

printf(a);
