tests/invalid/erro_declaracao.lang
int x;
x = 10;

if (x > 0) {
    int x; // Se o escopo for global, isso DEVE falhar.
    x = 20;
}